--- a/neural_search.ipynb
+++ b/neural_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8f11ac2e",
+   "id": "62452432",
    "metadata": {},
    "source": [
     "# Neural Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40edb412",
+   "id": "d836799a",
    "metadata": {},
    "source": [
     "An AI powered search engine using Transformers, K-Means, and Cosine Similarity."
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e551a357",
+   "execution_count": 1,
+   "id": "1c209f8d",
    "metadata": {},
    "outputs": [
     {
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "285f15ce",
+   "execution_count": 2,
+   "id": "0a1ae7ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ef9806d8",
+   "execution_count": 3,
+   "id": "144cb5cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d700690e",
+   "id": "d8bee29c",
    "metadata": {},
    "source": [
     "## Load data"
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "dc81f0d7",
+   "execution_count": 61,
+   "id": "dea9f618",
    "metadata": {},
    "outputs": [
     {
@@ -105,82 +105,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>adult</th>\n",
-       "      <th>belongs_to_collection</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>homepage</th>\n",
-       "      <th>id</th>\n",
-       "      <th>imdb_id</th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>...</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>spoken_languages</th>\n",
-       "      <th>status</th>\n",
-       "      <th>tagline</th>\n",
        "      <th>title</th>\n",
-       "      <th>video</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
+       "      <th>overview</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "      <td>http://toystory.disney.com/toy-story</td>\n",
-       "      <td>862</td>\n",
-       "      <td>tt0114709</td>\n",
-       "      <td>en</td>\n",
        "      <td>Toy Story</td>\n",
        "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1995-10-30</td>\n",
-       "      <td>373554033.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>5415.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   adult                              belongs_to_collection    budget  \\\n",
-       "0  False  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000   \n",
-       "\n",
-       "                                              genres  \\\n",
-       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
-       "\n",
-       "                               homepage   id    imdb_id original_language  \\\n",
-       "0  http://toystory.disney.com/toy-story  862  tt0114709                en   \n",
-       "\n",
-       "  original_title                                           overview  ...  \\\n",
-       "0      Toy Story  Led by Woody, Andy's toys live happily in his ...  ...   \n",
-       "\n",
-       "  release_date      revenue runtime                          spoken_languages  \\\n",
-       "0   1995-10-30  373554033.0    81.0  [{'iso_639_1': 'en', 'name': 'English'}]   \n",
-       "\n",
-       "     status  tagline      title  video vote_average vote_count  \n",
-       "0  Released      NaN  Toy Story  False          7.7     5415.0  \n",
-       "\n",
-       "[1 rows x 24 columns]"
+       "       title                                           overview\n",
+       "0  Toy Story  Led by Woody, Andy's toys live happily in his ...\n",
+       "1    Jumanji  When siblings Judy and Peter discover an encha..."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,38 +138,15 @@
    "source": [
     "data_location = f\"s3://{bucket_name}/{bucket_prefix}/data/movies_metadata.csv\"\n",
     "\n",
-    "df = pd.read_csv(data_location)\n",
+    "df = pd.read_csv(data_location)[[\"title\", \"overview\"]]\n",
+    "df = df[df[\"overview\"].notna()]\n",
     "\n",
-    "df.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "ce819600",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    Led by Woody, Andy's toys live happily in his ...\n",
-       "Name: overview, dtype: object"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "overview_df = df[\"overview\"]\n",
-    "\n",
-    "overview_df.head(1)"
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e0a6e63a",
+   "id": "f52d50f6",
    "metadata": {},
    "source": [
     "## Load embedding model"
@@ -227,83 +154,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "3ce1ac9f",
+   "execution_count": 29,
+   "id": "95e08bfa",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import BertModel, BertTokenizer\n",
     "import torch\n",
-    "from itertools import combinations"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "1005b4c4",
+   "execution_count": 44,
+   "id": "13a2f596",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f99517944b4540c88463fd67319e998a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f88b22eee5684a1a82b420f967164664",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/28.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a1aa6b75ead48f98625cd16bafad792",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/570 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d52f14db3b9f4e2d9df981705df4ec0e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/440M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -313,13 +184,17 @@
     "model_name = \"bert-base-uncased\"\n",
     "\n",
     "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
-    "model = BertModel.from_pretrained(model_name)"
+    "\n",
+    "text_model = BertModel.from_pretrained(model_name)\n",
+    "cosine_similarity_model = torch.nn.CosineSimilarity(dim=0, eps=1e-6)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "9c1cb34f",
+   "execution_count": 8,
+   "id": "f9819df9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,74 +211,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "c5dd1f20",
+   "execution_count": 25,
+   "id": "a72ecb41",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([5, 768])"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sample_text = [\"The moon looks beautiful today\", \"I am going for a walk today\", \"Do you like the moon?\", \"Those are some tasty sandwiches\", \"Why is that castle old?\"]\n",
-    "\n",
-    "encoded_input = tokenizer(sample_text, padding=True, truncation=True, return_tensors=\"pt\")\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    out = model(**encoded_input)\n",
-    "\n",
-    "sentence_embeddings = mean_pooling(out, encoded_input[\"attention_mask\"])\n",
-    "\n",
-    "sentence_embeddings.size()"
+    "def create_embeddings(text, tokenizer, model):\n",
+    "    encoded_input = tokenizer(\n",
+    "        text,\n",
+    "        padding=True,\n",
+    "        truncation=True,\n",
+    "        return_tensors=\"pt\"\n",
+    "    )\n",
+    "    encoded_input = {k: v.to(device) for k, v in encoded_input.items()}\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        model_output = model(**encoded_input)\n",
+    "    \n",
+    "    return mean_pooling(model_output, encoded_input[\"attention_mask\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56f108cf",
+   "metadata": {},
+   "source": [
+    "### Example embedding similarities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "6a530633",
+   "execution_count": 45,
+   "id": "ea063fa9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'The moon looks beautiful today', 'I am going for a walk today', similarity=0.6303966045379639\n",
-      "'The moon looks beautiful today', 'Do you like the moon?', similarity=0.7295293807983398\n",
-      "'The moon looks beautiful today', 'Those are some tasty sandwiches', similarity=0.6001173257827759\n",
-      "'The moon looks beautiful today', 'Why is that castle old?', similarity=0.6742875576019287\n",
-      "'I am going for a walk today', 'Do you like the moon?', similarity=0.6220574378967285\n",
-      "'I am going for a walk today', 'Those are some tasty sandwiches', similarity=0.5492238402366638\n",
-      "'I am going for a walk today', 'Why is that castle old?', similarity=0.5797369480133057\n",
-      "'Do you like the moon?', 'Those are some tasty sandwiches', similarity=0.5650840401649475\n",
-      "'Do you like the moon?', 'Why is that castle old?', similarity=0.7014718055725098\n",
-      "'Those are some tasty sandwiches', 'Why is that castle old?', similarity=0.5975286364555359\n"
+      "'Andy is going to the beach on Sunday with his friends', 'Mandy is going to the movies Tuesday with her Mum', similarity=0.8401806950569153\n",
+      "'Andy is going to the beach on Sunday with his friends', 'The cargo ship sailed through the night', similarity=0.561195433139801\n",
+      "'Mandy is going to the movies Tuesday with her Mum', 'The cargo ship sailed through the night', similarity=0.5241331458091736\n"
      ]
     }
    ],
    "source": [
-    "cosine_similarity_model = torch.nn.CosineSimilarity(dim=0, eps=1e-6)\n",
+    "from itertools import combinations\n",
+    "\n",
+    "sample_text = [\n",
+    "    \"Andy is going to the beach on Sunday with his friends\",\n",
+    "    \"Mandy is going to the movies Tuesday with her Mum\",\n",
+    "    \"The cargo ship sailed through the night\",\n",
+    "]\n",
+    "\n",
+    "sample_embeddings = create_embeddings(sample_text, tokenizer, text_model).cpu().numpy()\n",
     "\n",
     "tuples = combinations(list(range(sentence_embeddings.size()[0])), 2)\n",
     "\n",
     "with torch.no_grad():\n",
     "    for i, j in tuples:\n",
     "        similarity = cosine_similarity_model(sentence_embeddings[i], sentence_embeddings[j])\n",
-    "        print(f\"'{sample_text[i]}', '{sample_text[j]}', similarity={similarity}\")\n"
+    "        print(f\"'{sample_text[i]}', '{sample_text[j]}', similarity={similarity}\")"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6b19912d",
+   "cell_type": "markdown",
+   "id": "bebd7121",
    "metadata": {},
    "source": [
-    "So now we need to come up with a model pipeline where we first take the text from pandas, move it to the GPU, run the model on all of the text in batches, record the vectors in the dataframe, perform KMeansClustering with a trained model, create labels for the dataframe, then for a given piece of text get its embeddings and its cluster, then perform cosine similarity search between all elements in the cluster and then rank accordingly"
+    "## Create model pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b44912f6",
+   "metadata": {},
+   "source": [
+    "### Preprocessing\n",
+    "- Take the text from pandas\n",
+    "- Run the model on all of the text\n",
+    "- Record the embedding vectors in the dataframe\n",
+    "- Perform KMeansClustering and record the cluster for each vector\n",
+    "\n",
+    "### Perform search\n",
+    "- Create embeddings\n",
+    "- Get cluster of embedding vectors\n",
+    "- Find all text with the same cluster\n",
+    "- Perform cosine similarity search between all elements in the cluster\n",
+    "- Return the top K most elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9ba5b181",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>embeddings</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       title                                           overview  embeddings  \\\n",
+       "0  Toy Story  Led by Woody, Andy's toys live happily in his ...         NaN   \n",
+       "1    Jumanji  When siblings Judy and Peter discover an encha...         NaN   \n",
+       "\n",
+       "   cluster  \n",
+       "0       -1  \n",
+       "1       -1  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"embeddings\"] = np.nan\n",
+    "df[\"cluster\"] = -1\n",
+    "\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c6ea6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 128\n",
+    "\n",
+    "input_text = df[\"overview\"].values\n",
+    "\n",
+    "for i in range(0, len(input_text) // batch_size, batch_size):\n",
+    "    batch = list(input_text[i:i + batch_size])\n",
+    "    \n",
+    "    batch_embeddings = create_embeddings(batch, tokenizer, text_model)\n",
+    "    \n",
+    "    print(batch_embeddings)\n",
+    "    \n",
+    "    break"
    ]
   }
  ],
