To device and batch inference

--- a/neural_search.ipynb
+++ b/neural_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "62452432",
+   "id": "ecd73feb",
    "metadata": {},
    "source": [
     "# Neural Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d836799a",
+   "id": "3cedc9a4",
    "metadata": {},
    "source": [
     "An AI powered search engine using Transformers, K-Means, and Cosine Similarity."
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1c209f8d",
+   "id": "af8ac0c6",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0a1ae7ac",
+   "id": "dfabf20d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "144cb5cf",
+   "id": "4cefe8a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8bee29c",
+   "id": "cb8f7d26",
    "metadata": {},
    "source": [
     "## Load data"
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "dea9f618",
+   "execution_count": 4,
+   "id": "57eb25a0",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "1    Jumanji  When siblings Judy and Peter discover an encha..."
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52d50f6",
+   "id": "b21f1dc8",
    "metadata": {},
    "source": [
     "## Load embedding model"
@@ -154,8 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "95e08bfa",
+   "execution_count": 5,
+   "id": "b7f46c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,18 +166,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "13a2f596",
+   "execution_count": 27,
+   "id": "c40b7fe0",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CosineSimilarity()"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -188,13 +198,16 @@
     "text_model = BertModel.from_pretrained(model_name)\n",
     "cosine_similarity_model = torch.nn.CosineSimilarity(dim=0, eps=1e-6)\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "text_model.to(device)\n",
+    "cosine_similarity_model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f9819df9",
+   "execution_count": 7,
+   "id": "c01b43bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a72ecb41",
+   "execution_count": 8,
+   "id": "dfcf30d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f108cf",
+   "id": "280ae8ea",
    "metadata": {},
    "source": [
     "### Example embedding similarities"
@@ -241,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "ea063fa9",
+   "execution_count": 28,
+   "id": "23d6ec7a",
    "metadata": {},
    "outputs": [
     {
@@ -264,19 +277,19 @@
     "    \"The cargo ship sailed through the night\",\n",
     "]\n",
     "\n",
-    "sample_embeddings = create_embeddings(sample_text, tokenizer, text_model).cpu().numpy()\n",
+    "sample_embeddings = create_embeddings(sample_text, tokenizer, text_model).cpu()\n",
     "\n",
-    "tuples = combinations(list(range(sentence_embeddings.size()[0])), 2)\n",
+    "tuples = combinations(list(range(sample_embeddings.shape[0])), 2)\n",
     "\n",
     "with torch.no_grad():\n",
     "    for i, j in tuples:\n",
-    "        similarity = cosine_similarity_model(sentence_embeddings[i], sentence_embeddings[j])\n",
+    "        similarity = cosine_similarity_model(sample_embeddings[i], sample_embeddings[j])\n",
     "        print(f\"'{sample_text[i]}', '{sample_text[j]}', similarity={similarity}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bebd7121",
+   "id": "f1a3be5a",
    "metadata": {},
    "source": [
     "## Create model pipeline"
@@ -284,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b44912f6",
+   "id": "499b67e5",
    "metadata": {},
    "source": [
     "### Preprocessing\n",
@@ -303,8 +316,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "9ba5b181",
+   "execution_count": 22,
+   "id": "6f74b7b6",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +376,7 @@
        "1       -1  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,12 +390,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b2c6ea6b",
+   "execution_count": 29,
+   "id": "1ae7866f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0296,  0.0278,  0.0258,  ...,  0.0236,  0.0131, -0.0032],\n",
+      "        [-0.0240,  0.0164,  0.0324,  ...,  0.0049,  0.0090,  0.0282],\n",
+      "        [ 0.0059, -0.0250,  0.0348,  ..., -0.0197,  0.0080, -0.0302],\n",
+      "        ...,\n",
+      "        [-0.0053, -0.0131, -0.0133,  ...,  0.0029,  0.0026, -0.0022],\n",
+      "        [-0.0098, -0.0114,  0.0017,  ...,  0.0073, -0.0028, -0.0029],\n",
+      "        [-0.0252,  0.0081,  0.0026,  ...,  0.0027,  0.0078,  0.0111]])\n"
+     ]
+    }
+   ],
    "source": [
-    "batch_size = 128\n",
+    "batch_size = 32\n",
     "\n",
     "input_text = df[\"overview\"].values\n",
     "\n",
